# MimicKit

./: .gitignore  main.py  pyproject.toml
data/envs/: add_go2_env.yaml  add_humanoid_env.yaml  add_smpl_env.yaml  amp_g1_env.yaml  amp_go2_env.yaml  amp_humanoid_env.yaml  amp_location_humanoid_env.yaml  amp_location_humanoid_sword_shield_env.yaml  amp_pi_plus_env.yaml  amp_smpl_env.yaml  amp_steering_humanoid_env.yaml  ase_humanoid_env.yaml  deepmimic_g1_env.yaml  deepmimic_humanoid_sword_shield_env.yaml  deepmimic_pi_plus_env.yaml  deepmimic_smpl_env.yaml  dof_test_humanoid_env.yaml  vault_humanoid_env.yaml  view_motion_humanoid_env.yaml  view_motion_humanoid_sword_shield_env.yaml  view_motion_pi_plus_env.yaml
embodied_skills/data/envs/: add_g1_env.yaml  add_pi_plus_env.yaml  ase_humanoid_sword_shield_env.yaml  deepmimic_go2_env.yaml  vault_g1_env.yaml  view_motion_g1_env.yaml  view_motion_go2_env.yaml  view_motion_smpl_env.yaml
maze/: A01_ca_ts_dqn.py  B01_multi_agent_maze.ipynb  B02_language_analysis.ipynb  agent_alignment.ipynb  agent_translater.ipynb  single_dqn.py
maze/maze_wall_array/: wall_array_dict_7x7_n3800.pt
mimickit/engines/: isaac_lab_engine.py
